# yatodo

./: .gitignore  .tool-versions  Dockerfile  README.md  create_kind_with_populated_registry.sh  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: bb080af8e7c3_create_task_table.py
kubernetes/: README.md  frontend-deployment.yaml  kind_config.yaml  kustomization.yaml
kubernetes/cka/: mynetpol.yaml
kubernetes/etcdclient/: pod.yaml  upstream.txt
kubernetes/gateway/: gateway.yaml  http_route.yaml
kubernetes/postgres/: deployment.yaml  service.yaml
kubernetes/yatodo/: deployment.yaml  service.yaml
src/: YatodoModel.drawio  config.py  crud.py  database.py  main.py  models.py  schemas.py
