[tool.poetry]
name = "yatodo"
version = "0.1.0"
description = "Yet Another Todo App"
authors = ["jamesclair <clair.james88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
sqlmodel = "^0.0.14"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
